unpackaged/main/default/objects/fferpcore__VirtualDataObjectProviderFactory__mdt/fferpcore__VirtualDataObjectProviderFactory__mdt.object-meta.xml
<CustomObject>
    <label>Virtual Object Provider Factory</label>
    <pluralLabel>Virtual Object Provider Factories</pluralLabel>
</CustomObject>