unpackaged/main/default/objects/fferpcore__VirtualDataObjectProviderFactory__mdt/fields/fferpcore__ClassName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ClassName__c</fullName>
    <description>Name of the factory class.</description>
    <inlineHelpText>Name of the factory class.</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>