unpackaged/main/default/objects/fferpcore__VirtualDataObjectProviderFactory__mdt/fields/fferpcore__Data__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Data__c</fullName>
    <description>Data required by the provider.</description>
    <inlineHelpText>Data required by the provider.</inlineHelpText>
    <label>Data</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>