unpackaged/main/default/objects/fferpcore__VirtualDataObjectProviderFactory__mdt/fields/fferpcore__Obsolete__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Obsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The record is obsolete when checked.</description>
    <inlineHelpText>The record is obsolete when checked.</inlineHelpText>
    <label>Obsolete</label>
    <type>Checkbox</type>
</CustomField>