unpackaged/main/default/objects/fferpcore__VirtualDataObjectProviderFactory__mdt/fields/fferpcore__Provider__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Provider__c</fullName>
    <description>The associated source of data, such as an SObjectType.</description>
    <inlineHelpText>The associated source of data, such as an SObjectType.</inlineHelpText>
    <label>Provider</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>