unpackaged/main/default/objects/fferpcore__VirtualDataObjectProviderFactory__mdt/fields/fferpcore__VirtualObject__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__VirtualObject__c</fullName>
    <description>The associated generic object.</description>
    <inlineHelpText>The associated generic object.</inlineHelpText>
    <label>Virtual Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>